--- a/예제/Makefile 작성/Makefile
+++ b/예제/Makefile 작성/Makefile
@@ -9,13 +9,13 @@ demo: main.o f1.o f2.o
 	$(LD) -o $@ $^ $(LDFLAGS)
 
 main.o: main.c f1.h
-	$(CC) -MMD -c -o $@ $< $(CCFLAGS)
+	$(CC) -c -o $@ $< $(CCFLAGS)
 
 f1.o: f1.c f1.h f2.h
-	$(CC) -MMD -c -o $@ $< $(CCFLAGS)
+	$(CC) -c -o $@ $< $(CCFLAGS)
 
 f2.o: f2.c f1.h f2.h
-	$(CC) -MMD -c -o $@ $< $(CCFLAGS)
+	$(CC) -c -o $@ $< $(CCFLAGS)
 
 clean: 
-	rm -f *.o *.d demo
+	rm -f *.o demo
