Add submodule esp2017-feserial

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "homeworks/esp2017-scull"]
 	path = homeworks/esp2017-scull
 	url = https://github.com/kdzlvaids/esp2017-scull.git
+[submodule "homeworks/esp2017-feserial"]
+	path = homeworks/esp2017-feserial
+	url = https://github.com/kdzlvaids/esp2017-feserial.git
